add more comments

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 </head>
 
 <body>
-    <!-- Image and text -->
+    <!-- Banner -->
     <nav id='section0' class="navbar navbar-dark bg-primary">
         <a class="navbar-brand" href="#">
             <img src="img/favicon-32x32.png" alt=""> DATS6401-Project1 By Junhe Zhang
         </a>
     </nav>
+    <!-- Side bar -->
     <div id='side-navbar' class="card border-info mb-3" style="max-width: 12rem;">
         <div class="card-header">Visualization:</div>
         <div class="card-body text-info">
@@ -30,6 +31,7 @@
             <a href="#section0">Go Top</a>
         </div>
     </div>
+    <!-- Geo Map Section -->
     <div>
         <div id='section-Geo' class="container">
             <h3>G20 Countries Data Visualization On Map</h4>
@@ -75,6 +77,7 @@
                     </div>
                 </div>
         </div>
+        <!-- Line Chart Section -->
         <div id='section-Line'>
             <div class="container">
                 <div class="row">
@@ -107,6 +110,7 @@
                 </div>
             </div>
         </div>
+        <!-- Bar Charts General Information  -->
         <div id='section1'>
             <h2>Comparison between Education, Health and Military Spending in Total GDP</h1>
                 <div id='bar-charts'>
@@ -194,14 +198,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- <h3>Military Spending Analysis for Top 10 G20 Countries</h3>
-            <div id='bar-chart1' style='width: 500px; height: 500px;'></div>
-            <h3>Health Spending Analysis for Top 10 G20 Countries</h3>
-            <div id='bar-chart2' style='width: 500px; height: 500px;'></div>
-            <h3>Education Spending Analysis for Top 10 G20 Countries</h3>
-            <div id='bar-chart3' style='width: 500px; height: 500px;'></div> -->
-
         </div>
+        <!-- Stacked Bar Charts Compare Data -->
         <div id='section2'>
             <h2>Comparison between Education, Health and Military Spending in Per Capita GDP</h1>
                 <div class="container">
@@ -256,6 +254,7 @@
                     </div>
                 </div>
         </div>
+        <!-- Bar Chart Growing Rate -->
         <div id='section3' class="growing-rate">
             <h3>Growing rate in U.S $ From 2011 to 2015</h3>
             <div class="container">
@@ -283,6 +282,7 @@
                 </div>
             </div>
         </div>
+        <!-- Footer Banner -->
         <div id='section-footer'>
             <h4>Data Source</h4>
             <a href="https://data.worldbank.org/indicator/SE.XPD.TOTL.GD.ZS?end=2017&locations=US&start=2011&view=chart" target="_blank">World Bank</a>
